Social media bar in header added

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "tennis-academy-yasar",
-	"homepage": "https://github.com/nikita-reva/tennis-academy-yasar-website.git",
+	"homepage": "https://nikita-reva.github.io/tennis-academy-yasar-website/",
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
