--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"emailjs-com": "^2.6.4",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
+		"react-player": "^2.8.1",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.1",
 		"react-select": "^3.2.0",
