--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"leaflet": "^1.7.1",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
+		"react-ga": "^3.3.0",
 		"react-icons": "^4.1.0",
 		"react-pdf": "^5.1.0",
 		"react-player": "^2.8.1",
