--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 		"react-pdf": "^5.1.0",
 		"react-player": "^2.8.1",
 		"react-router-dom": "^5.2.0",
-		"react-scripts": "4.0.1",
+		"react-scripts": "^1.0.10",
 		"react-select": "^3.2.0",
 		"react-to-print": "^2.12.2",
 		"styled-components": "^5.2.1",
